--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,9 @@ certifi==2022.9.24
 charset-normalizer==2.1.1
 grapheme==0.6.0
 idna==3.4
+langdetect==1.0.9
 pathlib==1.0.1
 requests==2.28.1
+six==1.16.0
 soupsieve==2.3.2.post1
 urllib3==1.26.12
