--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,16 @@ beautifulsoup4==4.11.1
 bs4==0.0.1
 certifi==2022.9.24
 charset-normalizer==2.1.1
+gitdb==4.0.10
+GitPython==3.1.32
 grapheme==0.6.0
 idna==3.4
 langdetect==1.0.9
 pathlib==1.0.1
 requests==2.28.1
 six==1.16.0
+smmap==5.0.0
 soupsieve==2.3.2.post1
+style==1.1.0
+update==0.0.1
 urllib3==1.26.12
